# axum-inertia

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yml  ci.yml  scheduled.yml  test.yml
examples/todo/: .gitignore  Cargo.toml  README.md
examples/todo/client/: package-lock.json  package.json  vite.config.ts
examples/todo/client/src/: main.tsx  styles.css
examples/todo/client/src/pages/Todos/: Index.tsx
examples/todo/src/: main.rs
src/: config.rs  lib.rs  page.rs  request.rs  response.rs  vite.rs
