[package]
name = "todo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.9"
axum-inertia = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "net", "sync", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
